<resources>
    <!-- UI texts -->
    <string name="app_name">室内导航</string>
    <string name="menu">菜单</string>
    <string name="maps">地图</string>
    <string name="navigate">导航</string>
    <string name="settings">设置</string>
    <string name="log">日志</string>
    <string name="tags">标签</string>
    <string name="general">通用</string>
    <string name="debug">调试</string>
    <string name="manage">管理</string>
    <string name="load">加载</string>
    <string name="modify">修改</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="alert">警告</string>
    <string name="load_from_sdcard">从 SD 卡加载</string>
    <string name="load_from_net">从网络加载</string>
    <string name="load_tags">载入标签</string>
    <string name="save_tags">保存标签</string>
    <string name="input_target_name">输入目标名</string>
    <string name="use_fake_location">使用虚假位置</string>
    <string name="use_random_location">使用随机位置</string>
    <string name="use_debug_path">使用调试路径</string>
    <string name="edit_debug_path">编辑调试路径</string>
    <string name="start_emulating">开始模拟</string>
    <string name="stop_emulating">停止模拟</string>
    <string name="track_path">记录路径</string>
    <string name="display_all_guide_path">显示所有导航路径</string>
    <string name="show_log">显示日志</string>
    <string name="disable_debug_mode">关闭开发者模式</string>

    <!--   Notification texts   -->
    <string name="load_succeed">加载成功</string>
    <string name="load_failed">加载失败</string>
    <string name="rename_succeed">重命名成功</string>
    <string name="rename_failed">重命名失败</string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="downloading">下载中…</string>
    <string name="download_succeed">下载成功</string>
    <string name="download_failed">下载失败</string>
    <string name="save_succeed">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="debug_mode_enabled">开发者模式已开启</string>
    <string name="debug_mode_disabled">开发者模式已关闭</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_permission">没有所需的权限</string>
    <string name="sdcard_not_found">未发现 SD 卡</string>
    <string name="exit_notification">再按一次以退出应用</string>
    <string name="cant_open_folder">无法打开文件夹</string>
    <string name="no_loaded_map">没有已加载的地图</string>
    <string name="no_tag">没有标签</string>
    <string name="already_top_floor">已是最顶层</string>
    <string name="already_ground_floor">已是最底层</string>
    <string name="no_current_floor">没有当前楼层</string>
    <string name="confirm_to_delete">是否要删除该文件？</string>
    <string name="click_to_switch_floor">点击方向键以切换楼层</string>
    <string name="starting_navigation">开始导航…</string>
    <string name="navigation_finished">导航结束</string>
    <string name="no_debug_path">无调试路径</string>
    <string name="failed_to_build_path">无法构建导航路径。导航已取消</string>

    <!--   Unformatted texts   -->
    <string name="debug_mode_notification" formatted="false">再点击 %d 次以开启开发者模式</string>
    <string name="tag_metadata" formatted="false">楼层: %d 类型: %s 索引: %d</string>
</resources>
