<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
                android:id="@+id/menu_navigate"
                android:icon="@drawable/ic_menu_navigate"
                android:title="@string/navigate"/>
        <item
                android:id="@+id/menu_maps"
                android:icon="@drawable/ic_menu_maps"
                android:title="@string/maps"/>
        <item
                android:id="@+id/menu_tags"
                android:icon="@drawable/ic_menu_tags"
                android:title="@string/tags"/>
        <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
    </group>
</menu>
