<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Navigator.Component"
        android:background="@color/background"
        android:orientation="vertical">

    <cn.vicey.navigator.Components.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_menu"
            app:title="@string/menu"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/mm_navigate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:highlighted="true"
            app:icon="@drawable/ic_menu_navigate"
            app:text="@string/navigate"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/mm_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_menu_maps"
            app:text="@string/maps"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/mm_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_menu_tags"
            app:text="@string/tags"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/mm_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_menu_settings"
            app:text="@string/settings"/>

</LinearLayout>