<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Navigator.Component">

    <LinearLayout
            android:id="@+id/settings_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">

        <LinearLayout
                android:id="@+id/sv_general_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/sv_general_header"
                    style="@style/Navigator.SettingsView.Header"
                    android:text="@string/general"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/sv_debug_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/sv_debug_header"
                    style="@style/Navigator.SettingsView.Header"
                    android:text="@string/debug"/>

            <TextView
                    android:id="@+id/sv_debug_show_log"
                    style="@style/Navigator.SettingsView.Item"
                    android:text="@string/show_log"/>

            <cn.vicey.navigator.Components.SettingsCheckBox
                    android:id="@+id/sv_debug_use_fake_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/middle_item_height"
                    app:text="@string/use_fake_location"/>

            <cn.vicey.navigator.Components.SettingsCheckBox
                    android:id="@+id/sv_debug_track_path"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/middle_item_height"
                    app:text="@string/track_path"/>

            <TextView
                    android:id="@+id/sv_debug_disable_debug_mode"
                    style="@style/Navigator.SettingsView.Item"
                    android:text="@string/disable_debug_mode"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
