<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

    <cn.vicey.navigator.Components.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:icon="@drawable/ic_menu"
            app:title="@string/menu_title"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/menu_navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/navigate"
            app:icon="@drawable/ic_menu_navigate"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/menu_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/maps"
            app:icon="@drawable/ic_menu_maps"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/menu_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/tags"
            app:icon="@drawable/ic_menu_tags"/>

    <cn.vicey.navigator.Components.MenuItem
            android:id="@+id/menu_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/settings"
            app:icon="@drawable/ic_menu_settings"/>

</LinearLayout>